--- a/src/components/resume/resume.css
+++ b/src/components/resume/resume.css
@@ -47,12 +47,12 @@
 .resume_item h5 {
     color: var(--color-primary);
     font-weight: 100;
-    font-size: x-small;
+    font-size: 11.5px;
  
 }
 .resume_item p {
     color: rgba(0, 0, 0, 0.534);
-    font-weight: 300;
+    font-weight: 350;
     font-size: 14px;
 }
 
